--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
           </a>
         </div>
         <div>
-          <a routerLink="/dashboard/product" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Products</a>
+          <a routerLink="/dashboard/product" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Products</a>
           <a routerLink="/dashboard/product" routerLinkActive="active" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
               <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
@@ -25,7 +25,7 @@
           </a>
         </div>
         <div>
-          <a routerLink="/dashboard/users" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Users</a>
+          <a routerLink="/dashboard/users" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Users</a>
           <a routerLink="/dashboard/users" routerLinkActive="active" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
               <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
@@ -34,7 +34,7 @@
           </a>
         </div>
         <div>
-          <a routerLink="/dashboard/withdrawals" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Withdrawals</a>
+          <a routerLink="/dashboard/withdrawals" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Withdrawals</a>
           <a routerLink="/dashboard/withdrawals" routerLinkActive="active" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
               <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
@@ -43,7 +43,7 @@
           </a>
         </div>
         <div>
-          <a routerLink="/dashboard/inspections" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Inspections</a>
+          <a routerLink="/dashboard/inspections" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Inspections</a>
           <a routerLink="/dashboard/inspections" routerLinkActive="active" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
               <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
