update as of friday

--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
-<div class="md:w-1/5 w-1/5 bg-gray-800 text-white h-screen fixed top-0 left-0 transform transition-transform duration-300 ease-in-out"
+<div class="md:w-1/6 w-1/5 bg-gray-800 text-white h-screen fixed top-0 left-0 transform transition-transform duration-300 ease-in-out"
      [ngClass]="{'translate-x-0': sidebarVisible || !isMobile, '-translate-x-full': !sidebarVisible && isMobile}">
      <div class="p-3" >
       <div class="bg-orange-300 rounded py-10 text-center d-flex mb-5" >
         <img src="../../../assets/logo2.png" class="m-auto" width="100" alt="">
       </div>
         <div>
-          <a routerLink="/dashboard/dashboard" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >
+          <a routerLink="/dashboard/dashboard" routerLinkActive="active" class="font-poppins block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >
             Dashboard
           </a>
           <a routerLink="/dashboard/dashboard" routerLinkActive="active" class="block py-2 px-4 rounded hover:bg-gray-700 text-white " *ngIf="isMobile" >
@@ -16,7 +16,7 @@
           </a>
         </div>
         <div>
-          <a routerLink="/dashboard/product" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Products</a>
+          <a routerLink="/dashboard/product" routerLinkActive="active" class="font-poppins block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Products</a>
           <a routerLink="/dashboard/product" routerLinkActive="active" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
               <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
@@ -25,7 +25,7 @@
           </a>
         </div>
         <div>
-          <a routerLink="/dashboard/users" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Users</a>
+          <a routerLink="/dashboard/users" routerLinkActive="active" class="font-poppins block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Users</a>
           <a routerLink="/dashboard/users" routerLinkActive="active" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
               <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
@@ -34,7 +34,7 @@
           </a>
         </div>
         <div>
-          <a routerLink="/dashboard/withdrawals" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Withdrawals</a>
+          <a routerLink="/dashboard/withdrawals" routerLinkActive="active" class="font-poppins block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Withdrawals</a>
           <a routerLink="/dashboard/withdrawals" routerLinkActive="active" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
               <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
@@ -43,8 +43,26 @@
           </a>
         </div>
         <div>
-          <a routerLink="/dashboard/inspections" routerLinkActive="active" class="font-mono block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Inspections</a>
+          <a routerLink="/dashboard/inspections" routerLinkActive="active" class="font-poppins block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Inspections</a>
           <a routerLink="/dashboard/inspections" routerLinkActive="active" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
+              <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+              <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5"/>
+            </svg>
+          </a>
+        </div>
+        <div>
+          <a routerLink="/dashboard/offers" routerLinkActive="active" class="font-poppins block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Manage Offers</a>
+          <a routerLink="/dashboard/offers" routerLinkActive="active" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
+              <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+              <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5"/>
+            </svg>
+          </a>
+        </div>
+        <div>
+          <a routerLink="/dashboard/transactions" routerLinkActive="active" class="font-poppins block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >View Transactions</a>
+          <a routerLink="/dashboard/transactions" routerLinkActive="active" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
               <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
               <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5"/>
