--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,16 +1,16 @@
 
 <div class="dashboard flex">
-    <div class="md:w-1/5 w-1/5" >
+    <div class="md:w-1/6 w-1/5" >
       <app-sidebar></app-sidebar>
     </div>
-    <div class="content flex-grow p-4 ml-0 md:w-4/5 w-4/5">
+    <div class="content flex-grow p-4 ml-0 md:w-4/6 w-4/5">
       <!-- <h1 class="text-2xl font-bold">ZeroPay Dashboard</h1> -->
       <div class="p-3 bg-slate-200 shadow-sm rounded-lg " >
-        <div class="font-medium text-purple-900 font-mono">
+        <div class="font-medium text-purple-900 font-poppins">
           ZeroPay Dashboard
         </div>
       </div>
-      <div class="mt-4 md:ml-4/5 bg-slate-100 rounded-lg min-h-screen p-3 font-mono">
+      <div class="mt-4 md:ml-4/5 bg-slate-100 rounded-lg min-h-screen p-3 font-poppins">
         <router-outlet></router-outlet>
       </div>
     </div>
