added analytics to dashboard

--- a/src/app/auth-page/auth-page.component.html
+++ b/src/app/auth-page/auth-page.component.html
@@ -29,7 +29,7 @@
             
           </form>
           <p class="text-sm text-center mt-4">
-            Don't have an account? <a  (click)="toggleForm()" class="text-indigo-600">Register</a>
+            <!-- Don't have an account? <a  (click)="toggleForm()" class="text-indigo-600">Register</a> -->
           </p>
       </div>
       
