--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -235,7 +235,7 @@
       </a>
     </div>
     <div class="bg-green-300 rounded py-2 text-center d-flex " >
-      <button class="text-red-400 " >Log Out</button>
+      <button class="text-red-400 " (click)="logout()" >Log Out</button>
     </div>
   </div>
   
