added analytics to dashboard

--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -234,7 +234,7 @@
         </svg>
       </a>
     </div>
-    <div class="bg-green-300 rounded py-2 text-center d-flex " >
+    <div class="bg-green-300 rounded py-2 text-center d-flex mt-8 " >
       <button class="text-red-400 " (click)="logout()" >Log Out</button>
     </div>
   </div>
