--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -63,7 +63,7 @@
                 </table>
               </div>
         </div>
-        <div *ngSwitchCase="'viewTransactioins'" class="bg-white p-3 rounded-md" >
+        <div *ngSwitchCase="'viewTransactioins'" class="bg-white mt-8 p-3 rounded-md" >
             <div class="flex justify-end my-3">
                 <button
                   (click)="tranState = 'transactions'"
