--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,11 +2,11 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 my-5">
     <div class="bg-white shadow-sm p-4 text-white h-32 rounded-md ">
       <p class="text-2xl text-black" >Total Inflow</p>
-      <p class="text-md text-purple-900 mt-5" > {{analytics.totalInflow | nairaCurrency}} </p>
+      <p class="text-md text-purple-900 mt-5" > {{analytics?.totalInflow | nairaCurrency}} </p>
     </div>
     <div class="bg-white shadow-sm p-4 text-white h-32 rounded-md">
-      <p class="text-2xl text-black" >Total Outflow</p>
-      <p class="text-md text-purple-900 mt-5" > {{analytics.totalOutflow | nairaCurrency}} </p>
+      <p class="text-2xl text-black" >Total Payouts</p>
+      <p class="text-md text-purple-900 mt-5" > {{analytics?.totalOutflow | nairaCurrency}} </p>
     </div>
     <div class="bg-white shadow-sm p-4 text-white h-32 rounded-md">
       <p class="text-2xl text-black" >Total Users</p>
