--- a/src/app/inspections/inspections.component.html
+++ b/src/app/inspections/inspections.component.html
@@ -52,6 +52,13 @@
             >
               VIEW
             </button>
+            &nbsp;
+            <button
+              (click)="deleteInspection(insp.id)"
+              class="bg-red-900 text-xs text-white py-2 px-4 rounded hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50"
+            >
+              DELETE
+            </button>
             </td>
           </tr>
         </tbody>
