--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -5,10 +5,11 @@
     </div>
     <div class="content flex-grow p-4 ml-0 md:w-4/6 w-4/5">
       <!-- <h1 class="text-2xl font-bold">ZeroPay Dashboard</h1> -->
-      <div class="p-3 bg-slate-200 shadow-sm rounded-lg " >
+      <div class="p-3 bg-slate-200 shadow-sm rounded-lg flex justify-between" >
         <div class="font-medium text-purple-900 font-poppins">
           ZeroPay Dashboard
         </div>
+        <div class="font-medium text-black-900 font-poppins" > Welcome, {{username}} </div>
       </div>
       <div class="mt-4 md:ml-4/5 bg-slate-100 rounded-lg min-h-screen p-3 font-poppins">
         <router-outlet></router-outlet>
