--- a/src/app/subscriptions/subscriptions.component.html
+++ b/src/app/subscriptions/subscriptions.component.html
@@ -1,16 +1,25 @@
 <div class="overflow-x-auto">
-    <div
-      class="min-w-full  items-center h-auto justify-center justify-between"
-    >
-      <div class="lg:p-2  w-full ">
-        
+  <ng-container [ngSwitch]="transferState">
+    <div class="min-w-full items-center h-auto justify-center justify-between" *ngSwitchCase="'viewTransfersHistory'" >
+      <div class="text-end">
+        <button
+          class="bg-purple-900 px-5 py-2 rounded shadow text-white text-xs"
+          (click)="transferState = 'makeTransfer'"
+        >
+          <div class="flex">
+            
+            &nbsp; Request Payouts
+          </div>
+        </button>
+      </div>
+      <div class="lg:p-2 w-full">
         <table class="min-w-full divide-y divide-gray-200">
           <thead class="bg-gray-800 text-white">
             <tr>
               <th
                 class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
               >
-                User 
+                User
               </th>
               <th
                 class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
@@ -18,10 +27,10 @@
                 Source
               </th>
               <th
-              class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
-            >
-              Amount
-            </th>
+                class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
+              >
+                Amount
+              </th>
               <th
                 class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
               >
@@ -51,13 +60,30 @@
                 {{ withdrawal?.amount | currencyFormat }}
               </td>
               <td class="px-2 py-4 whitespace-nowrap sm:px-6">
-                {{ withdrawal?.status  }}
+                {{ withdrawal?.status }}
               </td>
               <td class="px-2 py-4 whitespace-nowrap sm:px-6">
-                {{ withdrawal?.createdAt | date: 'longDate' }}
+                {{ withdrawal?.createdAt | date : "longDate" }}
               </td>
               <td class="px-2 py-4 whitespace-nowrap sm:px-6">
-                <a class="font-xs font-bold" *ngIf="withdrawal?.status !== 'PENDING' " >Completed</a> <a *ngIf="withdrawal?.status == 'PENDING' " class="text-purple-900 font-xs font-bold " (click)="approveWithdrawal(withdrawal?.id)" >Approve</a> &nbsp; <a *ngIf="withdrawal?.status == 'PENDING' " (click)="disapproveWithdrawal(withdrawal?.id)" class="text-red-500 font-xs font-bold " >Decline</a>
+                <a
+                  class="font-xs font-bold"
+                  *ngIf="withdrawal?.status !== 'PENDING'"
+                  >Completed</a
+                >
+                <a
+                  *ngIf="withdrawal?.status == 'PENDING'"
+                  class="text-purple-900 font-xs font-bold"
+                  (click)="approveWithdrawal(withdrawal?.id)"
+                  >Approve</a
+                >
+                &nbsp;
+                <a
+                  *ngIf="withdrawal?.status == 'PENDING'"
+                  (click)="disapproveWithdrawal(withdrawal?.id)"
+                  class="text-red-500 font-xs font-bold"
+                  >Decline</a
+                >
               </td>
               <!-- <td class="px-2 py-4 whitespace-nowrap sm:px-6">VIEW</td> -->
             </tr>
@@ -65,4 +91,9 @@
         </table>
       </div>
     </div>
+    <div class="min-w-full items-center h-auto justify-center justify-between" *ngSwitchCase="'makeTransfer'" >
+
+    </div>
+  </ng-container>
+
 </div>
