--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -9,7 +9,7 @@
         <div class="font-medium text-purple-900 font-poppins">
           ZeroPay Dashboard
         </div>
-        <div class="font-medium text-black-900 font-poppins" > Welcome, {{username}} </div>
+        <div class="font-medium text-black-900 font-poppins" > Howdie! {{username}} </div>
       </div>
       <div class="mt-4 md:ml-4/5 bg-slate-100 rounded-lg min-h-screen p-3 font-poppins">
         <router-outlet></router-outlet>
