--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -232,8 +232,10 @@
                 </table>
             </div>
             <div class="d-flex">
-              <button class="bg-red-500 px-5 mt-5 py-2 rounded shadow text-white text-xs" (click)="blockUser()" >Block User</button>
-              <button class="bg-purple-900 px-5 mt-5 py-2 rounded shadow text-white text-xs mx-5" (click)="makeAMaketter(this.viewedUser.id)" > Make User a marketer</button>
+              <button class="bg-red-500 px-5 mt-5 py-2 rounded shadow text-white text-xs" *ngIf="!isUserBlocked" (click)="blockUser()" >Block User</button>
+              <button class="bg-red-500 px-5 mt-5 py-2 rounded shadow text-white text-xs" *ngIf="isUserBlocked" (click)="unblockUser()" >unblock User</button>
+              <button class="bg-purple-900 px-5 mt-5 py-2 rounded shadow text-white text-xs mx-5" *ngIf="adminType == 'super_admin' " (click)="makeAMaketter(this.viewedUser.id)" > Make User a marketer</button>
+              <button class="bg-purple-900 px-5 mt-5 py-2 rounded shadow text-white text-xs mx-5" *ngIf="adminType == 'super_admin' " (click)="makeAdmin(this.viewedUser.id)" > Make an Admin</button>
             </div>
            
         </div>
