--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="overflow-x-auto">
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 my-5">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4 my-5">
+    <!-- <div class="bg-white shadow-sm p-4 text-white h-32 rounded-md"></div> -->
     <div class="bg-white shadow-sm p-4 text-white h-32 rounded-md ">
       <p class="text-2xl text-black" >Total Inflow</p>
       <p class="text-md text-purple-900 mt-5" > {{analytics?.totalInflow | nairaCurrency}} </p>
@@ -12,7 +13,7 @@
       <p class="text-2xl text-black" >Total Users</p>
       <p class="text-md text-purple-900 mt-5" > {{userCount}} </p>
     </div>
-    <div class="bg-white shadow-sm p-4 text-white h-32 rounded-md">Box 4</div>
+    
   </div>
   <div
     class="min-w-full flex flex-col md:flex-col lg:flex-row items-center h-auto justify-center justify-between"
