--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
         class="font-poppins block py-2 px-4 rounded hover:bg-gray-700 text-white"
         *ngIf="!isMobile"
       >
-        Dashboard
+        Overview
       </a>
       <a
         routerLink="/dashboard/dashboard"
