--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -36,7 +36,7 @@
                     <th
                     class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
                   >
-                    Account Number
+                    Role
                   </th>
                     <th
                       class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
@@ -60,7 +60,7 @@
                         {{ user?.profile?.walletBalance | currencyFormat }}
                       </td>
                       <td class="px-2 py-4 whitespace-nowrap sm:px-6">
-                        {{ user?.profile?.accountNumber }}
+                        {{ user?.role }}
                       </td>
                     <td class="px-2 py-4 whitespace-nowrap sm:px-6">
                         <button class="bg-purple-900 px-5 py-2 rounded shadow text-white text-xs" (click)="showUser(user.id)" >VIEW</button>
