--- a/src/app/subscriptions/subscriptions.component.html
+++ b/src/app/subscriptions/subscriptions.component.html
@@ -110,6 +110,9 @@
         <p class="my-3" >Source: {{this.selectedWithdrawal[0].source}} </p>
         <p class="my-3" >Status: {{this.selectedWithdrawal[0].status}} </p>
         <p class="my-3" >Approved By Accountant: {{this.approvedByAccountant}} </p>
+        <p class="my-3" >Approved By Admin: {{this.approvedByAdmin}} </p>
+        <p class="my-3" >Approved By Super Admin: {{this.approvedByAdmin}} </p>
+
       </div>
       <br><br>
       <div class="flex" >
