--- a/src/app/inspections/inspections.component.html
+++ b/src/app/inspections/inspections.component.html
@@ -6,7 +6,7 @@
           (click)="InspState = 'add'"
           class="bg-purple-900 text-xs text-white py-2 px-4 rounded hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50"
         >
-          Add New Product
+          Add New Date
         </button>
       </div>
       <table class="min-w-full divide-y divide-gray-200">
