rearranging transaction list

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -99,7 +99,7 @@
                     Account Number: <span class="text-orange-300" >{{viewedUser?.profile?.accountNumber}}</span>
                 </div>
                 <div class="my-3" >
-                  User Code : <span class="text-orange-300" >{{userCode}}</span>
+                  User Code : <span class="text-orange-300" >{{viewedUser?.referalCode}}</span>
               </div>
                 <div class="my-3" >
                     Phone Number: <span class="text-orange-300"  >{{viewedUser.phoneNumber}}</span>
