--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -151,6 +151,16 @@
           <th
             class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
           >
+            Type
+          </th>
+          <th
+            class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
+          >
+            Date
+          </th>
+          <th
+            class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
+          >
             Status
           </th>
           <th
@@ -161,7 +171,7 @@
         </tr>
       </thead>
       <tbody class="bg-white divide-y divide-gray-200">
-        <tr *ngFor="let tran of transactions | slice:-20 ">
+        <tr *ngFor="let tran of transactions | slice:0:20 ">
           <td class="px-2 py-4 whitespace-nowrap sm:px-6">
             {{ tran?.user?.fullName }}
           </td>
@@ -170,6 +180,12 @@
           </td>
           <td class="px-2 py-4 whitespace-nowrap sm:px-6">
             {{ tran?.amount | nairaCurrency }}
+          </td>
+           <td class="px-2 py-4 whitespace-nowrap sm:px-6">
+            {{ tran?.type }}
+          </td>
+          <td class="px-2 py-4 whitespace-nowrap sm:px-6">
+            {{ tran?.updatedAt | date: 'medium' }}
           </td>
           <td class="px-2 py-4 whitespace-nowrap sm:px-6">
             {{ tran?.status }}
